k8s/base/streamlit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit
  labels:
    component: streamlit
spec:
  type: ClusterIP
  ports:
    - port: 8501
      targetPort: 8501
  selector:
    component: streamlit
