k8s/base/traefik-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: streamlit-traefik
spec:
  entryPoints:
    - web          #  301-redirects to websecure
    - websecure
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: streamlit
          port: 8501
          sticky:
            cookie:
              name: stroute
              httpOnly: true
              sameSite: lax
              secure: true   # only send the affinity cookie over HTTPS
